Refactor FollowService to improve friend suggestion logic and integrate Neo4j recommendations
- Removed AI recommendation logic and replaced it with Neo4j-based friend suggestion candidates.
- Increased candidate pool size for friend suggestions.
- Streamlined the process of fetching and filtering eligible users for follow suggestions.
- Updated response structure to include necessary user details directly from Neo4j.

Enhance Neo4jSyncService to handle user display updates

- Added a new method to sync user display updates to Neo4j.
- Integrated the new event type for user display updates in the sync process.

Implement RecommendationClient for external recommendation service integration

- Created a new service to handle interactions with the recommendation service.
- Added methods to fetch recommendations based on user ID, topics, and groups.

Update PostService to include recommendation outbox for user interactions

- Integrated recommendation outbox logic for post interactions (like, dislike, share).
- Adjusted the handling of post reactions to update the recommendation system accordingly.

Refactor ReportService to synchronize post invalidation with recommendation outbox

- Updated the report handling to include recommendation outbox updates when a post is reported.

Enhance UserService to manage user profile updates with recommendation outbox

- Added logic to queue recommendation updates when user display information changes.
- Integrated recommendation outbox updates for user profile changes, including bio and avatar updates.